--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -17,6 +17,64 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="table-responsive">
+                            <!-- <table class="table shopping-summery text-center clean">
+                                <thead>
+                                    <tr class="main-heading">
+                                        <th scope="col">Image</th>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Price</th>
+                                        <th scope="col">Quantity</th>
+                                        <th scope="col">Subtotal</th>
+                                        <th scope="col">Remove</th>
+                                    </tr>
+                                </thead>
+                                <% if (cart && cart.product && cart.product.length > 0) { %>
+                                    <% cart.product.forEach(item => { %>
+                                        <% if (item.productId) { %>
+                                            <tr>
+                                                <td class="image product-thumbnail">
+                                                    <img src="/Productimages/<%= item.productId.media?.[0] || '/path/to/default/image.jpg' %>" alt="<%= item.productId.name && item.productId.name || 'Product Image' %>">
+                                                </td>
+                                                <td class="product-des product-name">
+                                                    <h5 class="product-name"><a href="/product/<%= item.productId._id %>"><%= item.productId.name %></a></h5>
+                                                    <p class="font-xs"><%= item.productId.description.substring(0, 50) %>...</p>
+                                                </td>
+                                                <td class="price" data-title="Price">
+                                                    <span class="price-val" data-product-id="<%= item.productId._id %>" data-price="<%= item.productId.price %>">₹<%= item.productId.price.toFixed(2) %></span>
+                                                </td>
+                                                <td class="text-center" data-title="Stock">
+                                                    <div class="detail-qty border radius m-auto">
+                                                        <button class="qty-up" data-max-stock="<%= item.productId.stock %>" data-product-id="<%= item.productId._id %>" data-cart-id="<%= cart._id %>">
+                                                            <i class="fi-rs-angle-small-up"></i>
+                                                        </button>
+                                                        <span class="qty-val" data-product-id="<%= item.productId._id %>"><%= item.quantity %></span>
+                                                        <button class="qty-down" data-max-stock="<%= item.productId.stock %>" data-product-id="<%= item.productId._id %>" data-cart-id="<%= cart._id %>">
+                                                            <i class="fi-rs-angle-small-down"></i>
+                                                        </button>
+                                                    </div>
+                                                </td>
+                                                <td class="text-right" data-title="Cart">
+                                                    <span class="total-price" data-product-id="<%= item.productId._id %>">₹<%= (item.productId.price * item.quantity).toFixed(2) %></span>
+                                                </td>
+                                                <td class="action" data-title="Remove">
+                                                    <a href="#" class="text-muted" onclick="removeQuantity('<%= cart._id %>', '<%= item.productId.id %>')">
+                                                        <i class="fi-rs-trash"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                        <% } else { %>
+                                            <tr> -->
+                                                <!-- <td colspan="6" class="text-center">Product information is not available.</td> -->
+                                            <!-- </tr>
+                                        <% } %>
+                                    <% }) %>
+                                <% } else { %>
+                                    <tr>
+                                        <td colspan="6" class="text-center">Your cart is empty.</td>
+                                    </tr>
+                                <% } %>
+                            </tbody>
+                            </table> -->
                             <table class="table shopping-summery text-center clean">
                                 <thead>
                                     <tr class="main-heading">
@@ -40,22 +98,24 @@
                                                     <p class="font-xs"><%= item.productId.description.substring(0, 50) %>...</p>
                                                 </td>
                                                 <td class="price" data-title="Price">
-                                                    <span class="price-val" data-product-id="<%= item.productId._id %>" data-price="<%= item.productId.price %>">$<%= item.productId.price.toFixed(2) %></span>
-                                                </td>
-                                                <td class="text-center" data-title="Stock">
+                                                    <% let lowestPrice = Math.min(item.productId.price, item.productId.discountPrice || item.productId.price, item.productId.categoryDiscountPrice || item.productId.price); %>
+                                                    <span class="price-val" data-product-id="<%= item.productId._id %>" data-price="<%= lowestPrice %>">₹<%= lowestPrice.toFixed(2) %></span>
+                                                  </td>
+                                                  <td class="text-center" data-title="Stock">
                                                     <div class="detail-qty border radius m-auto">
-                                                        <button class="qty-up" data-max-stock="<%= item.productId.stock %>" data-product-id="<%= item.productId._id %>" data-cart-id="<%= cart._id %>">
-                                                            <i class="fi-rs-angle-small-up"></i>
-                                                        </button>
-                                                        <span class="qty-val" data-product-id="<%= item.productId._id %>"><%= item.quantity %></span>
-                                                        <button class="qty-down" data-max-stock="<%= item.productId.stock %>" data-product-id="<%= item.productId._id %>" data-cart-id="<%= cart._id %>">
-                                                            <i class="fi-rs-angle-small-down"></i>
-                                                        </button>
+                                                      <button class="qty-up" data-max-stock="<%= item.productId.stock %>" data-product-id="<%= item.productId._id %>" data-cart-id="<%= cart._id %>">
+                                                        <i class="fi-rs-angle-small-up"></i>
+                                                      </button>
+                                                      <span class="qty-val" data-product-id="<%= item.productId._id %>"><%= item.quantity %></span>
+                                                      <button class="qty-down" data-max-stock="<%= item.productId.stock %>" data-product-id="<%= item.productId._id %>" data-cart-id="<%= cart._id %>">
+                                                        <i class="fi-rs-angle-small-down"></i>
+                                                      </button>
                                                     </div>
-                                                </td>
-                                                <td class="text-right" data-title="Cart">
-                                                    <span class="total-price" data-product-id="<%= item.productId._id %>">$<%= (item.productId.price * item.quantity).toFixed(2) %></span>
-                                                </td>
+                                                  </td>
+                                                  <td class="text-right" data-title="Cart">
+                                                    <span class="total-price" data-product-id="<%= item.productId._id %>">₹<%= (lowestPrice * item.quantity).toFixed(2) %></span>
+                                                  </td>
+                                                  
                                                 <td class="action" data-title="Remove">
                                                     <a href="#" class="text-muted" onclick="removeQuantity('<%= cart._id %>', '<%= item.productId.id %>')">
                                                         <i class="fi-rs-trash"></i>
@@ -75,6 +135,7 @@
                                 <% } %>
                             </tbody>
                             </table>
+                            
                         </div>
                         <div class="cart-action text-end">
                             <!-- <a class="btn  mr-10 mb-sm-15"><i class="fi-rs-shuffle mr-10"></i>Update Cart</a> -->
@@ -559,7 +620,7 @@
                     const price = parseFloat(priceElement.dataset.price);
                     const total = price * data.quantity;
     
-                    totalPriceElement.innerText = `$${total.toFixed(2)}`;
+                    totalPriceElement.innerText = `₹${total.toFixed(2)}`;
     
                     updateCartSubtotal();
                 } else {
@@ -575,15 +636,15 @@
             const totalPriceElements = document.querySelectorAll('.total-price');
     
             totalPriceElements.forEach(element => {
-                const totalPrice = parseFloat(element.innerText.replace('$', ''));
+                const totalPrice = parseFloat(element.innerText.replace('₹', ''));
                 subtotal += totalPrice;
             });
     
             const subtotalElement = document.getElementById('cart-subtotal');
             const totalElement = document.getElementById('cart-total');
     
-            subtotalElement.innerText = `$${subtotal.toFixed(2)}`;
-            totalElement.innerText = `$${subtotal.toFixed(2)}`;
+            subtotalElement.innerText = `₹${subtotal.toFixed(2)}`;
+            totalElement.innerText = `₹${subtotal.toFixed(2)}`;
         }
 
         updateCartSubtotal()
@@ -637,59 +698,74 @@
     }
     </script>
 
+    
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         const checkoutButton = document.getElementById('checkoutButton');
-    
-        checkoutButton.addEventListener('click', async (event) => {
-            event.preventDefault();
-    
-            try {
-                const response = await checkQuantity();
-                
-                if (response.message === 'Cart processed successfully') {
-                  
-                            window.location.href = '/checkout';
-                       
-                } else if (response.message === 'Cart is empty or not found') {
+        
+        if (checkoutButton) {
+            checkoutButton.addEventListener('click', async (event) => {
+                event.preventDefault();
+        
+                try {
+                    console.log("Checkout button clicked. Checking quantity...");
+                    const response = await checkQuantity();
+                    
+                    if (response.message === 'Cart processed successfully') {
+                        console.log("Cart processed successfully. Redirecting to checkout...");
+                        window.location.href = '/checkout';
+                    } else if (response.message === 'Cart is empty or not found') {
+                        console.log("Cart is empty or not found.");
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Empty Cart',
+                            text: 'Your cart is empty or not found.'
+                        });
+                    } else {
+                        console.log("Stock updated. Some items were out of stock.");
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Stock Updated',
+                            text: 'Some items in your cart were out of stock. The quantities have been updated.'
+                        });
+                    }
+                } catch (error) {
+                    console.error("Error checking stock:", error);
                     Swal.fire({
                         icon: 'error',
-                        title: 'Empty Cart',
-                        text: 'Your cart is empty or not found.'
+                        title: 'Error',
+                        text: 'There was an error checking the stock. Please try again later.'
                     });
-                } else {
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Stock Updated',
-                        text: 'Some items in your cart were out of stock. The quantities have been updated.'
-                    });
-                }
-            } catch (error) {
-                Swal.fire({
-                    icon: 'error',
-                    title: 'Error',
-                    text: 'There was an error checking the stock. Please try again later.'
-                });
-            }
-        });
-    
-        async function checkQuantity() {
-            const response = await fetch('/checkout-quantity', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
                 }
             });
+        } else {
+            console.error("Checkout button not found.");
+        }
     
-            if (!response.ok) {
-                throw new Error('Network response was not ok');
+        async function checkQuantity() {
+            try {
+                const response = await fetch('/checkout-quantity', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                });
+    
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+    
+                const data = await response.json();
+                console.log("Quantity check response:", data);
+                return data;
+            } catch (error) {
+                console.error("Error fetching quantity check:", error);
+                throw error;
             }
-    
-            return response.json();
         }
     });
     </script>
-  
+    
     
     
 <%- include('../partials/footercopy') %>
