--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -67,7 +67,7 @@
               > -->
             </li>
             <li>
-              <a href="#" class="btn btn-google hover-up">Login With Google</a>
+              <a href="/auth/google" class="btn btn-google hover-up">Login With Google</a>
             </li>
           </ul>
           <div class="text-muted text-center">
